README 重写与关于页引用更新
- README 精简为:简介+项目状态、主要改进、快速开始、
  开发环境(本机)、数据文件、依赖 jar;补「基本可用但 bug 不少」声明
- 关于页(readme.html)修复 GBK 乱码、繁体段删除留简体、
  引用版本更新为现状(JDK 21+/SWT 3.135、官方 2026-05-26 星历数据、
  WMM2025)